--- a/src/main/resources/com/example/envoisrecois/MainView.fxml
+++ b/src/main/resources/com/example/envoisrecois/MainView.fxml
@@ -1,20 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" stylesheets="@css/main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.envoisrecois.controllersFx.MainController">
       <children>
-      <Pane fx:id="paneDossiers" layoutY="97.0" prefHeight="503.0" prefWidth="200.0" style="-fx-background-color: gray;" />
-      <Pane fx:id="paneListeMessages" layoutX="200.0" layoutY="99.0" prefHeight="183.0" prefWidth="600.0" style="-fx-background-color: lightblue;" visible="true">
-         <children>
-                <Label fx:id="welcomeText" layoutX="42.0" layoutY="26.0" prefHeight="41.0" prefWidth="515.0" />
-                <Button layoutX="276.0" layoutY="79.0" onAction="#onHelloButtonClick" text="Hello!" />
-      
-                <Button layoutX="272.0" layoutY="127.0" onAction="#onQuit" text="Quitter!" />
-         </children>
-      </Pane>
-      <Pane fx:id="paneDetailsMessages" layoutX="201.0" layoutY="284.0" prefHeight="316.0" prefWidth="593.0" style="-fx-background-color: lightgreen;" visible="true" />
+            <ScrollPane fx:id="paneDossiers" prefHeight="1000.0" prefWidth="200.0">
+              <content>
+                <AnchorPane fx:id="anchorDossiers" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <children>
+                  <VBox fx:id="vBoxDossiers" prefHeight="10000.0" prefWidth="100.0">
+                     <children>
+                        <Pane fx:id="paneBoiteReception" prefHeight="200.0" prefWidth="200.0" />
+                        <Pane fx:id="paneEnvoyes" prefHeight="200.0" prefWidth="200.0" />
+                        <Pane fx:id="paneCorbeille" prefHeight="200.0" prefWidth="200.0" />
+                        <Pane fx:id="paneSpam" prefHeight="200.0" prefWidth="200.0" />
+                         <Pane fx:id="paneCommercial" prefHeight="200.0" prefWidth="200.0" />
+                         <Pane fx:id="paneReseauxSociaux" prefHeight="200.0" prefWidth="200.0" />
+                         <Pane fx:id="paneBoite1" prefHeight="200.0" prefWidth="200.0" />
+                         <Pane fx:id="paneBoite2" prefHeight="200.0" prefWidth="200.0" />
+                     </children>
+                  </VBox>
+               </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
       <Pane fx:id="paneMenu" prefHeight="100.0" prefWidth="800.0" style="-fx-background-color: lightgreen;">
          <children>
             <MenuBar prefHeight="25.0" prefWidth="800.0">
@@ -50,11 +64,41 @@
               </menus>
             </MenuBar>
             <Button layoutX="2.0" layoutY="30.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="130.0" text="Actualiser" />
-            <Button layoutX="140.0" layoutY="30.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="130.0" text="Nouveau" />
-             <Button layoutX="280.0" layoutY="30.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="130.0" text="Contacts" />
-             <Button layoutX="420.0" layoutY="30.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="130.0" text="Paramètres" />
-             <Button layoutX="560.0" layoutY="30.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="130.0" text="Quitter" />
+             <Button layoutX="140.0" layoutY="30.0" mnemonicParsing="false" onAction="#onBoiteReception" prefHeight="60.0" prefWidth="130.0" text="Boîte de réception" wrapText="true" />
+            <Button layoutX="280.0" layoutY="30.0" mnemonicParsing="false" onAction="#onNouveauMessage" prefHeight="60.0" prefWidth="130.0" text="Nouveau Message" wrapText="true" />
+             <Button layoutX="420.0" layoutY="30.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="130.0" text="Contacts" />
+             <Button layoutX="560.0" layoutY="30.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="130.0" text="Paramètres" />
+             <Button layoutX="700.0" layoutY="30.0" mnemonicParsing="false" onAction="#onQuit" prefHeight="60.0" prefWidth="130.0" text="Quitter" />
          </children>
+      </Pane>
+      <SplitPane fx:id="paneCentralSplit" dividerPositions="0.6141414141414141" layoutX="201.0" layoutY="100.0" orientation="VERTICAL" prefHeight="497.0" prefWidth="599.0">
+        <items>
+            <ScrollPane fx:id="paneListeMessages" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: lightblue;">
+                <content>
+                    <AnchorPane fx:id="anchorListeMessages" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: lightblue;">
+                        <children>
+                            <Label fx:id="welcomeText2" layoutX="42.0" layoutY="26.0" prefHeight="41.0" prefWidth="515.0" />
+                            <Button layoutX="50.0" layoutY="79.0" onAction="#onHelloButtonClick" text="Hello!" />
+                            <Button layoutX="50.0" layoutY="127.0" onAction="#onQuit" text="Quitter!" />
+                        </children>
+                    </AnchorPane>
+                </content>
+            </ScrollPane>
+            <ScrollPane fx:id="paneDetailsMessages" prefHeight="200.0" prefWidth="200.0">
+                <content>
+                    <AnchorPane fx:id="anchorDetailsMessages" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: lightgreen;">
+                        <children>
+                            <Label fx:id="welcomeText3" layoutX="42.0" layoutY="26.0" prefHeight="41.0" prefWidth="515.0" />
+                            <Button layoutX="50.0" layoutY="79.0" onAction="#onHelloButtonClick" text="Hello!" />
+                            <Button layoutX="50.0" layoutY="127.0" onAction="#onQuit" text="Quitter!" />
+                        </children>
+                    </AnchorPane>
+                </content>
+            </ScrollPane>
+        </items>
+      </SplitPane>
+      <Pane fx:id="paneNouveauMessage" prefHeight="200.0" prefWidth="200.0">
+
       </Pane>
       </children>
 </AnchorPane>
