--- a/src/main/resources/com/example/envoisrecois/LoginView.fxml
+++ b/src/main/resources/com/example/envoisrecois/LoginView.fxml
@@ -55,17 +55,22 @@
             <Label layoutX="9.0" layoutY="189.0" text="Adresse Email" />
             <Label layoutX="14.0" layoutY="234.0" text="Password" />
             <Label layoutX="14.0" layoutY="268.0" text="Password" />
-            <TextField fx:id="fieldUserName" layoutX="86.0" layoutY="58.0" prefHeight="30.0" prefWidth="250.0" />
-            <TextField fx:id="fieldNom" layoutX="86.0" layoutY="100.0" prefHeight="30.0" prefWidth="250.0" />
-            <TextField fx:id="fieldMail" layoutX="86.0" layoutY="182.0" prefHeight="30.0" prefWidth="250.0" />
-            <TextField fx:id="fieldprenom" layoutX="86.0" layoutY="140.0" prefHeight="30.0" prefWidth="250.0" />
-            <PasswordField fx:id="fielPassword" layoutX="86.0" layoutY="228.0" prefHeight="30.0" prefWidth="250.0" />
-            <PasswordField fx:id="fielPasswordConfirm" layoutX="86.0" layoutY="262.0" prefHeight="30.0" prefWidth="250.0" />
+            <TextField id="username" fx:id="fieldUserName" layoutX="86.0" layoutY="58.0" prefHeight="30.0" prefWidth="250.0" promptText="Username" />
+            <TextField id="nom" fx:id="fieldNom" layoutX="86.0" layoutY="100.0" prefHeight="30.0" prefWidth="250.0" promptText="Nom" />
+            <TextField id="prenom" fx:id="fieldprenom" layoutX="86.0" layoutY="140.0" prefHeight="30.0" prefWidth="250.0" promptText="Prénom" />
+            <TextField id="email" fx:id="fieldEMail" layoutX="86.0" layoutY="182.0" prefHeight="30.0" prefWidth="250.0" promptText="Adresse email" />
+            <PasswordField id="password1" fx:id="fielPassword" layoutX="86.0" layoutY="228.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" />
+            <PasswordField id="password2" fx:id="fielPasswordConfirm" layoutX="86.0" layoutY="262.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" />
             <Button layoutX="199.0" layoutY="351.0" mnemonicParsing="false" onAction="#onSeConnecter" text="Se connecter" />
             <Label layoutX="62.0" layoutY="355.0" text="Déjà inscrit ?" />
-            <Button layoutX="152.0" layoutY="307.0" mnemonicParsing="false" onAction="#verifUserName" text="S'inscrire" />
+            <Button layoutX="152.0" layoutY="307.0" mnemonicParsing="false" onAction="#onInscription" text="S'inscrire" />
             <Button layoutX="113.0" layoutY="408.0" mnemonicParsing="false" onAction="#onQuit" prefHeight="25.0" prefWidth="140.0" text="Quitter CourrierPlus" />
             <Label layoutX="18.0" layoutY="64.0" text="UserName" />
+            <Label fx:id="champtest" alignment="CENTER" layoutX="-163.0" layoutY="25.0" prefHeight="74.0" prefWidth="148.0" text="test">
+               <font>
+                  <Font name="Arial" size="40.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
    </children>
