--- a/src/main/resources/com/example/envoisrecois/LoginView.fxml
+++ b/src/main/resources/com/example/envoisrecois/LoginView.fxml
@@ -15,17 +15,6 @@
                </image>
             </ImageView>
          </children></Pane>
-      <Pane layoutX="450.0" prefHeight="140.0" prefWidth="350.0" style="-fx-background-color: lavender;">
-         <children>
-            <Label layoutX="56.0" layoutY="32.0" text="Bienvenue sur CourrierPlus">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <Label layoutX="73.0" layoutY="86.0" text="Application de messagerie sans pubs !" />
-            <Label fx:id="labelErreur" layoutX="7.0" layoutY="109.0" prefHeight="25.0" prefWidth="342.0" />
-         </children>
-      </Pane>
       <Pane fx:id="paneLogin" layoutX="450.0" layoutY="140.0" prefHeight="460.0" prefWidth="350.0" style="-fx-background-color: lightblue;">
          <children>
             <Label layoutX="113.0" layoutY="22.0" text="Se connecter">
@@ -34,16 +23,16 @@
                </font>
             </Label>
             <Label layoutX="54.0" layoutY="85.0" text="Login" />
-            <TextField fx:id="fieldLogin" layoutX="50.0" layoutY="109.0" prefHeight="30.0" prefWidth="250.0" />
-            <TextField fx:id="fieldPassword" layoutX="50.0" layoutY="164.0" prefHeight="30.0" prefWidth="250.0" />
-            <Button fx:id="onSeConnecter" layoutX="133.0" layoutY="219.0" mnemonicParsing="false" text="Se connecter" />
+            <TextField fx:id="fieldLoginUsername" layoutX="50.0" layoutY="110.0" prefHeight="30.0" prefWidth="250.0" promptText="Username" />
+            <PasswordField fx:id="fieldLoginPassword" layoutX="50.0" layoutY="150.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" />
+            <Button layoutX="50.0" layoutY="190.0" mnemonicParsing="false" onAction="#onLogin" prefWidth="250.0" text="Se connecter" />
             <Label layoutX="54.0" layoutY="287.0" text="Nouveau membre ?" />
             <Button fx:id="OnInscription" layoutX="65.0" layoutY="314.0" mnemonicParsing="false" onAction="#onSinscrire" text="S'inscrire" />
-            <Button fx:id="OnPasswordPerdu" layoutX="175.0" layoutY="314.0" mnemonicParsing="false" onAction="#switchApplication" text="Mot de passe perdu" />
+            <Button fx:id="OnPasswordPerdu" layoutX="175.0" layoutY="314.0" mnemonicParsing="false" text="Mot de passe perdu" />
             <Button layoutX="117.0" layoutY="374.0" mnemonicParsing="false" onAction="#onQuit" prefHeight="25.0" prefWidth="140.0" text="Quitter CourrierPlus" />
          </children>
       </Pane>
-      <Pane fx:id="paneInscription" layoutX="450.0" layoutY="140.0" prefHeight="460.0" prefWidth="350.0" style="-fx-background-color: lightblue;">
+      <Pane fx:id="paneInscription" layoutX="450.0" layoutY="140.0" prefHeight="460.0" prefWidth="350.0" style="-fx-background-color: lightblue;" visible="false">
          <children>
             <Label layoutX="114.0" layoutY="14.0" text="S'inscrire">
                <font>
@@ -61,17 +50,28 @@
             <TextField id="email" fx:id="fieldEMail" layoutX="86.0" layoutY="182.0" prefHeight="30.0" prefWidth="250.0" promptText="Adresse email" />
             <PasswordField id="password1" fx:id="fielPassword" layoutX="86.0" layoutY="228.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" />
             <PasswordField id="password2" fx:id="fielPasswordConfirm" layoutX="86.0" layoutY="262.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" />
+            <Button layoutX="86.0" layoutY="300.0" mnemonicParsing="false" onAction="#onInscription" prefHeight="30.0" prefWidth="250.0" text="S'inscrire" />
             <Button layoutX="199.0" layoutY="351.0" mnemonicParsing="false" onAction="#onSeConnecter" text="Se connecter" />
             <Label layoutX="62.0" layoutY="355.0" text="Déjà inscrit ?" />
-            <Button layoutX="152.0" layoutY="307.0" mnemonicParsing="false" onAction="#onInscription" text="S'inscrire" />
             <Button layoutX="113.0" layoutY="408.0" mnemonicParsing="false" onAction="#onQuit" prefHeight="25.0" prefWidth="140.0" text="Quitter CourrierPlus" />
             <Label layoutX="18.0" layoutY="64.0" text="UserName" />
-            <Label fx:id="champtest" alignment="CENTER" layoutX="-163.0" layoutY="25.0" prefHeight="74.0" prefWidth="148.0" text="test">
-               <font>
-                  <Font name="Arial" size="40.0" />
-               </font>
-            </Label>
          </children>
       </Pane>
+      <Pane layoutX="450.0" prefHeight="140.0" prefWidth="350.0" style="-fx-background-color: lavender;">
+         <children>
+            <Label layoutX="56.0" layoutY="32.0" text="Bienvenue sur CourrierPlus">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="73.0" layoutY="86.0" text="Application de messagerie sans pubs !" />
+            <Label fx:id="labelErreur" prefHeight="25.0" prefWidth="350.0" />
+         </children>
+      </Pane>
+      <ImageView fx:id="imageSablier" fitHeight="180.0" fitWidth="140.0" layoutX="300.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@images/sablier.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
