--- a/src/main/resources/com/example/envoisrecois/MainView.fxml
+++ b/src/main/resources/com/example/envoisrecois/MainView.fxml
@@ -133,10 +133,14 @@
                      <children>
                         <Button layoutX="50.0" layoutY="30.0" minHeight="60.0" minWidth="200.0" mnemonicParsing="false" onAction="#onNouveauMessageClick" text="Liste des contacts" />
                         <Button layoutX="300.0" layoutY="30.0" minHeight="60.0" minWidth="200.0" mnemonicParsing="false" onAction="#onNouveauMessageClick" text="Modifier le contact" />
+                        <Button layoutX="800.0" layoutY="30.0" minHeight="60.0" minWidth="200.0" mnemonicParsing="false" onAction="#onNouveauMessageClick" text="Ajouter contact" />
                         <Button layoutX="550.0" layoutY="30.0" minHeight="60.0" minWidth="200.0" mnemonicParsing="false" onAction="#onNouveauMessageClick" text="Supprimer le contact" />
                      </children>
                   </Pane>
-                  <Pane fx:id="paneDetailContact" prefHeight="200.0" prefWidth="200.0" />
+                  <Pane fx:id="paneListeContact" prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <VBox fx:id="vboxListeContacts" prefHeight="200.0" prefWidth="100.0" />
+                     </children></Pane>
                   <Pane fx:id="paneContactBas" prefHeight="200.0" prefWidth="200.0" />
                </children>
             </VBox>
