--- a/src/main/resources/com/example/envoisrecois/MainView.fxml
+++ b/src/main/resources/com/example/envoisrecois/MainView.fxml
@@ -133,16 +133,16 @@
                   <Button layoutX="500.0" layoutY="30.0" minHeight="60.0" minWidth="200.0" mnemonicParsing="false" onAction="#onBtnAjoutContact" text="Ajouter contact" />
                </children>
             </Pane>
-            <ScrollPane fx:id="paneListeContactScroll" prefHeight="200.0" prefWidth="200.0" vbarPolicy="NEVER">
-<!--               <content>-->
-<!--                  <VBox fx:id="vboxListeContacts" prefHeight="200.0" prefWidth="100.0" />-->
-<!--               </content>-->
-            </ScrollPane>
             <Pane fx:id="paneDetailContact" prefHeight="200.0" prefWidth="200.0" visible="false">
                <children>
                   <VBox fx:id="vboxDetailContact" prefHeight="200.0" prefWidth="100.0" />
                </children>
             </Pane>
+            <ScrollPane fx:id="paneListeContactScroll" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" vbarPolicy="ALWAYS">
+              <content>
+                <AnchorPane fx:id="anchorListeContacts" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+              </content>
+            </ScrollPane>
              <Pane fx:id="paneAjoutContact" prefHeight="200.0" prefWidth="200.0" visible="false">
                  <children>
                      <VBox fx:id="vboxAjoutContact" prefHeight="200.0" prefWidth="100.0" />
