--- a/src/main/resources/com/example/envoisrecois/MainView.fxml
+++ b/src/main/resources/com/example/envoisrecois/MainView.fxml
@@ -138,7 +138,53 @@
                   <VBox fx:id="vboxDetailContact" prefHeight="200.0" prefWidth="100.0" />
                </children>
             </Pane>
-            <ScrollPane fx:id="paneListeContactScroll" hbarPolicy="NEVER" prefHeight="392.0" prefWidth="428.0" vbarPolicy="ALWAYS" />
+            <ScrollPane fx:id="paneListeContactScroll" hbarPolicy="ALWAYS" prefHeight="600.0" prefWidth="600.0" vbarPolicy="ALWAYS">
+              <content>
+                <StackPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="600.0">
+                     <children>
+                        <GridPane minHeight="600.0" minWidth="600.0" prefHeight="600.0" prefWidth="600.0" vgap="10.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Pane prefHeight="200.0" prefWidth="600.0" style="-fx-background-color: lightgreen;">
+                                 <children>
+                                    <Label text="pane 1" />
+                                 </children>
+                              </Pane>
+                              <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: purple;" GridPane.rowIndex="1">
+                                 <children>
+                                    <Label text="pane 2" />
+                                 </children>
+                              </Pane>
+                              <Pane prefHeight="200.0" prefWidth="600.0" style="-fx-background-color: green;" GridPane.rowIndex="2">
+                                 <children>
+                                    <Label text="pane 3" />
+                                 </children>
+                              </Pane>
+                              <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: lightgreen;" GridPane.rowIndex="4">
+                                 <children>
+                                    <Label text="pane 4" />
+                                 </children>
+                              </Pane>
+                              <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+                                 <children>
+                                    <Label text="label 5" />
+                                 </children>
+                              </Pane>
+                           </children>
+                        </GridPane>
+                     </children>
+                  </StackPane>
+              </content>
+            </ScrollPane>
              <Pane fx:id="paneAjoutContact" prefHeight="200.0" prefWidth="200.0" visible="false">
              <children>
                  <VBox fx:id="vboxAjoutContact" prefHeight="200.0" prefWidth="100.0" />
