--- a/src/main/resources/com/example/envoisrecois/MainView.fxml
+++ b/src/main/resources/com/example/envoisrecois/MainView.fxml
@@ -3,194 +3,51 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.web.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" stylesheets="@css/main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.envoisrecois.controllersFx.MainController">
-      <children>
-            <ScrollPane fx:id="paneDossiers" prefHeight="1000.0" prefWidth="200.0">
-              <content>
-                <AnchorPane fx:id="anchorDossiers" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" stylesheets="@css/main.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.envoisrecois.controllersFx.MainViewController">
+   <children>
+      <BorderPane prefHeight="600.0" prefWidth="800.0">
+         <top>
+            <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label alignment="CENTER" prefHeight="102.0" prefWidth="801.0" text="Haut">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+         </top>
+         <left>
+            <ScrollPane fx:id="scrollListeDossiers" fitToWidth="true" prefHeight="400.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <content>
+                  <GridPane fx:id="gridListeDossiers" alignment="TOP_CENTER" prefHeight="400.0" prefWidth="200.0" vgap="50.0">
+                    <columnConstraints>
+                      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="NEVER" />
+                    </rowConstraints>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </GridPane>
+               </content>
+               <BorderPane.margin>
+                  <Insets />
+               </BorderPane.margin>
                <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="50.0" top="50.0" />
                </padding>
-               <children>
-                  <VBox fx:id="vBoxDossiers" prefHeight="10000.0" prefWidth="100.0">
-                     <children>
-                        <Pane fx:id="paneBoiteReception" prefHeight="200.0" prefWidth="200.0" />
-                        <Pane fx:id="paneEnvoyes" prefHeight="200.0" prefWidth="200.0" />
-                        <Pane fx:id="paneCorbeille" prefHeight="200.0" prefWidth="200.0" />
-                        <Pane fx:id="paneSpam" prefHeight="200.0" prefWidth="200.0" />
-                         <Pane fx:id="paneCommercial" prefHeight="200.0" prefWidth="200.0" />
-                         <Pane fx:id="paneReseauxSociaux" prefHeight="200.0" prefWidth="200.0" />
-                         <Pane fx:id="paneBoite1" prefHeight="200.0" prefWidth="200.0" />
-                         <Pane fx:id="paneBoite2" prefHeight="200.0" prefWidth="200.0" />
-                     </children>
-                  </VBox>
-               </children>
-                  </AnchorPane>
-              </content>
             </ScrollPane>
-      <Pane fx:id="paneMenu" prefHeight="100.0" prefWidth="800.0" style="-fx-background-color: lightgreen;">
-         <children>
-            <MenuBar prefHeight="25.0" prefWidth="800.0">
-              <menus>
-                <Menu mnemonicParsing="false" text="Fichier">
-                  <items>
-                        <MenuItem mnemonicParsing="false" text="Nouveau Message" />
-                        <MenuItem mnemonicParsing="false" text="Actualiser" />
-                    <MenuItem mnemonicParsing="false" onAction="#onQuit" text="Quitter" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Contacts">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Liste des contacts" />
-                  </items>
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="Nouveau contact" />
-                    </items>
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="Supprimer contact" />
-                    </items>
-                </Menu>
-                  <Menu mnemonicParsing="false" text="Paramètres">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="Action 1" />
-                    </items>
-                  </Menu>
-                <Menu mnemonicParsing="false" text="Aide">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="A propos" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
-            <Button layoutX="2.0" layoutY="30.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="130.0" text="Actualiser" />
-             <Button layoutX="140.0" layoutY="30.0" mnemonicParsing="false" onAction="#onBoiteReception" prefHeight="60.0" prefWidth="130.0" text="Boîte de réception" wrapText="true" />
-            <Button layoutX="280.0" layoutY="30.0" mnemonicParsing="false" onAction="#onNouveauMessage" prefHeight="60.0" prefWidth="130.0" text="Nouveau Message" wrapText="true" />
-             <Button layoutX="420.0" layoutY="30.0" mnemonicParsing="false" onAction="#onBtnContacts" prefHeight="60.0" prefWidth="130.0" text="Contacts" />
-             <Button layoutX="560.0" layoutY="30.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="130.0" text="Paramètres" />
-             <Button layoutX="700.0" layoutY="30.0" mnemonicParsing="false" onAction="#onQuit" prefHeight="60.0" prefWidth="130.0" text="Quitter" />
-         </children>
-      </Pane>
-      <SplitPane fx:id="paneCentralSplit" dividerPositions="0.6141414141414141" layoutX="201.0" layoutY="100.0" orientation="VERTICAL" prefHeight="497.0" prefWidth="599.0">
-        <items>
-            <ScrollPane fx:id="paneListeMessages" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: lightblue;">
-                <content>
-                    <AnchorPane fx:id="anchorListeMessages" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: lightblue;">
-                        <children>
-                            <Label fx:id="welcomeText2" layoutX="42.0" layoutY="26.0" prefHeight="41.0" prefWidth="515.0" />
-                            <Button layoutX="50.0" layoutY="79.0" onAction="#onHelloButtonClick" text="Hello!" />
-                            <Button layoutX="50.0" layoutY="127.0" onAction="#onQuit" text="Quitter!" />
-                        </children>
-                    </AnchorPane>
-                </content>
-            </ScrollPane>
-            <ScrollPane fx:id="paneDetailsMessages" prefHeight="200.0" prefWidth="200.0">
-                <content>
-                    <AnchorPane fx:id="anchorDetailsMessages" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: lightgreen;">
-                        <children>
-                            <Label fx:id="welcomeText3" layoutX="42.0" layoutY="26.0" prefHeight="41.0" prefWidth="515.0" />
-                            <Button layoutX="50.0" layoutY="79.0" onAction="#onHelloButtonClick" text="Hello!" />
-                            <Button layoutX="50.0" layoutY="127.0" onAction="#onQuit" text="Quitter!" />
-                        </children>
-                    </AnchorPane>
-                </content>
-            </ScrollPane>
-        </items>
-      </SplitPane>
-      <Pane fx:id="paneNouveauMessage" prefHeight="200.0" prefWidth="200.0">
-         <children>
-            <VBox fx:id="vboxNouveauMessage" prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <Pane fx:id="paneNouveauMessageBtnH" prefHeight="200.0" prefWidth="200.0">
-                     <children>
-                        <Button layoutX="50.0" layoutY="30.0" minHeight="60.0" minWidth="200.0" mnemonicParsing="false" onAction="#onNouveauMessageClick" text="Envoyer le message" />
-                         <Button layoutX="300.0" layoutY="30.0" minHeight="60.0" minWidth="200.0" mnemonicParsing="false" onAction="#onNouveauMessageClick" text="Conserver comme brouillon" />
-                         <Button layoutX="550.0" layoutY="30.0" minHeight="60.0" minWidth="200.0" mnemonicParsing="false" onAction="#onNouveauMessageClick" text="Annuler / Supprimer" />
-                     </children>
-                  </Pane>
-                   <Pane fx:id="paneNouveauMessageEntete" prefHeight="200.0" prefWidth="200.0">
-                       <children>
-                           <Label layoutX="10.0" layoutY="20.0" text="Destinataire" />
-                           <TextField fx:id="fieldSend" layoutX="120.0" layoutY="20.0" />
-
-                           <Label layoutX="10.0" layoutY="50.0" minWidth="100.0" text="Sujet du message" />
-                           <TextField fx:id="fieldSujet" layoutX="120.0" layoutY="50.0" />
-                       </children>
-                   </Pane>
-                  <HTMLEditor fx:id="htmlNouveauMessage" htmlText="&lt;html&gt;&lt;head&gt;&lt;style&gt;body {font-family: 'Arial'; font-size: 14pt;}&lt;/style&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" prefHeight="200.0" prefWidth="506.0" />
-                  <Pane fx:id="paneNouveauMessageJoindre" prefHeight="200.0" prefWidth="200.0">
-                   <Button layoutX="50.0" layoutY="30.0" minHeight="60.0" minWidth="200.0" mnemonicParsing="false" onAction="#onNouveauMessageClick" text="Joindre un fichier" />
-                  </Pane>
-               </children>
-            </VBox>
-         </children></Pane>
-      <Pane fx:id="paneContacts" prefHeight="200.0" prefWidth="200.0">
-         <children>
-            <Pane fx:id="paneContactsBtn" prefHeight="200.0" prefWidth="200.0">
-               <children>
-                  <Button layoutX="200.0" layoutY="30.0" minHeight="60.0" minWidth="200.0" mnemonicParsing="false" onAction="#onBtnContacts" text="Liste des contacts" />
-                  <Button layoutX="500.0" layoutY="30.0" minHeight="60.0" minWidth="200.0" mnemonicParsing="false" onAction="#onBtnAjoutContact" text="Ajouter contact" />
-               </children>
-            </Pane>
-            <Pane fx:id="paneDetailContact" prefHeight="200.0" prefWidth="200.0" visible="false">
-               <children>
-                  <VBox fx:id="vboxDetailContact" prefHeight="200.0" prefWidth="100.0" />
-               </children>
-            </Pane>
-            <ScrollPane fx:id="paneListeContactScroll" hbarPolicy="ALWAYS" prefHeight="600.0" prefWidth="600.0" vbarPolicy="ALWAYS">
+         </left>
+         <center>
+            <ScrollPane prefHeight="600.0" prefWidth="600.0" BorderPane.alignment="CENTER">
               <content>
-                <StackPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="600.0">
-                     <children>
-                        <GridPane minHeight="600.0" minWidth="600.0" prefHeight="600.0" prefWidth="600.0" vgap="10.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <Pane prefHeight="200.0" prefWidth="600.0" style="-fx-background-color: lightgreen;">
-                                 <children>
-                                    <Label text="pane 1" />
-                                 </children>
-                              </Pane>
-                              <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: purple;" GridPane.rowIndex="1">
-                                 <children>
-                                    <Label text="pane 2" />
-                                 </children>
-                              </Pane>
-                              <Pane prefHeight="200.0" prefWidth="600.0" style="-fx-background-color: green;" GridPane.rowIndex="2">
-                                 <children>
-                                    <Label text="pane 3" />
-                                 </children>
-                              </Pane>
-                              <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: lightgreen;" GridPane.rowIndex="4">
-                                 <children>
-                                    <Label text="pane 4" />
-                                 </children>
-                              </Pane>
-                              <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
-                                 <children>
-                                    <Label text="label 5" />
-                                 </children>
-                              </Pane>
-                           </children>
-                        </GridPane>
-                     </children>
-                  </StackPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
               </content>
             </ScrollPane>
-             <Pane fx:id="paneAjoutContact" prefHeight="200.0" prefWidth="200.0" visible="false">
-             <children>
-                 <VBox fx:id="vboxAjoutContact" prefHeight="200.0" prefWidth="100.0" />
-             </children>
-             </Pane>
-         </children>
-      </Pane>
-      </children>
+         </center></BorderPane>
+   </children>
 </AnchorPane>
